Refactored Screenshot functionality

--- a/assignment/src/test/resources/config.properties
+++ b/assignment/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 browser=chrome:remote
-headless=false
+headless=true
 seleniumRemoteUrl=http://localhost:4444
 appBaseUrl=https://www.jobs.nhs.uk
 implicitWaitTimeOut=10
