--- a/assignment/src/test/resources/config.properties
+++ b/assignment/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-browser=chrome:remote
+browser=firefox:remote
 headless=true
 seleniumRemoteUrl=http://localhost:4444
 appBaseUrl=https://www.jobs.nhs.uk
